codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__trust_directory__tests__renders_snapshot_for_narrow_terminal.snap
---
source: tui/src/onboarding/trust_directory.rs
expression: terminal.backend()
---
> You are in /workspace/project

  Do you trust the contents of this directory?
  Working with untrusted contents comes with
  higher risk of prompt injection. Trusting the
  directory allows project-local config, hooks,
  and exec policies to load.

› 1. Trust this directory                      
  2. Quit Codex

  enter select
